--- a/.github/workflows/actionlint.yml
+++ b/.github/workflows/actionlint.yml
@@ -16,3 +16,25 @@ jobs:
         shell: bash
       - name: Check workflow files
         run: ./actionlint
+
+  test:
+    runs-on: ubuntu-latest
+    steps:
+      -
+        name: Checkout
+        uses: actions/checkout@v2
+      -
+        name: Validate
+        uses: docker/bake-action@v1
+        with:
+          targets: validate
+      -
+        name: Test
+        uses: docker/bake-action@v1
+        with:
+          targets: test
+      -
+        name: Upload coverage
+        uses: codecov/codecov-action@v1
+        #with:
+        #  file: ./coverage/clover.xml
