--- a/.github/workflows/actionlint.yml
+++ b/.github/workflows/actionlint.yml
@@ -17,9 +17,37 @@ jobs:
       - name: Check workflow files
         run: ./actionlint
 
-  test:
+  docker-build-test:
     runs-on: ubuntu-latest
     steps:
+      -
+        name: Checkout
+        uses: actions/checkout@v2
+      -
+        name: Set up QEMU
+        uses: docker/setup-qemu-action@v1
+      -
+        name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v1
+#      -
+#        name: Login to DockerHub
+#        uses: docker/login-action@v1 
+#        with:
+#          username: ${{ secrets.DOCKERHUB_USERNAME }}
+#          password: ${{ secrets.DOCKERHUB_TOKEN }}
+      -
+#        name: Build and push
+        name: Build and test
+        id: docker_build
+        uses: docker/build-push-action@v2
+        with:
+          context: .
+#          push: true
+          push: false
+          tags: user/app:latest
+      -
+        name: Image digest
+        run: echo ${{ steps.docker_build.outputs.digest }}
       -
         name: Checkout
         uses: actions/checkout@v2
